# qdrant-Similarity

./: Dockerfile  azure-aks.yaml  bitbucket-pipelines.yml  main.py  pyproject.toml  requirements.txt
src/: mega_similarity.py  metadata.py
tests/: OP_testResult.txt  embed.ipynb  testQueryContent.py  testQueryProfile.py  testSaveCollection.py
